--- a/custom_components/yamaha_soundbar/manifest.json
+++ b/custom_components/yamaha_soundbar/manifest.json
@@ -7,6 +7,7 @@
   "after_dependencies": ["http", "tts", "media_source"],
   "config_flow": false,
   "iot_class": "local_polling",
+  "loggers": ["custom_components.yamaha_soundbar"],
   "requirements": [
     "async-upnp-client>=0.27",
     "validators~=0.12",
